// Package network_handler å®ç°äº¤æ˜“ç½‘ç»œåè®®å¤„ç†æœåŠ¡
//
// ğŸ¯ **äº¤æ˜“ç½‘ç»œåè®®å¤„ç†æœåŠ¡æ¨¡å—**
//
// æœ¬åŒ…å®ç° NetworkProtocolHandler æ¥å£ï¼Œæä¾›äº¤æ˜“ç½‘ç»œåè®®å¤„ç†åŠŸèƒ½ï¼š
// - å®ç°TxProtocolRouteræ¥å£ï¼ˆæµå¼åè®®å¤„ç†ï¼‰
// - å®ç°TxAnnounceRouteræ¥å£ï¼ˆè®¢é˜…åè®®å¤„ç†ï¼‰
// - æ”¯æŒäº¤æ˜“åŒé‡ä¿éšœä¼ æ’­æœºåˆ¶
package network_handler

import (
	"context"
	"fmt"

	networkIntegration "github.com/weisyn/v1/internal/core/blockchain/integration/network"
	"github.com/weisyn/v1/internal/core/blockchain/interfaces"
	"github.com/weisyn/v1/internal/core/blockchain/transaction/lifecycle"
	txProtocol "github.com/weisyn/v1/pb/network/protocol"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/mempool"
	peer "github.com/libp2p/go-libp2p/core/peer"
	"google.golang.org/protobuf/proto"
)

// TxNetworkProtocolHandlerService äº¤æ˜“ç½‘ç»œåè®®å¤„ç†æœåŠ¡å®ç°ï¼ˆè–„å§”æ‰˜å±‚ï¼‰
//
// ğŸ¯ **èŒè´£å®šä½**ï¼š
// - å®ç° interfaces.NetworkProtocolHandler æ¥å£
// - å®ç° integration/network.TxAnnounceRouter æ¥å£ï¼ˆè®¢é˜…åè®®ï¼‰
// - å®ç° integration/network.TxProtocolRouter æ¥å£ï¼ˆæµå¼åè®®ï¼‰
// - å¤„ç†æ¥è‡ªP2Pç½‘ç»œçš„äº¤æ˜“å…¬å‘Šæ¶ˆæ¯å’Œäº¤æ˜“ä¸­ç»§è¯·æ±‚
// - æ‰§è¡Œï¼šè§£ç  â†’ éªŒè¯ â†’ å…¥æ± çš„å®Œæ•´æµç¨‹
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**ï¼š
// - éµå¾ªManagerå§”æ‰˜æ¨¡å¼ï¼Œä½œä¸ºtransactionåŸŸçš„ç½‘ç»œå­æ¨¡å—
// - ç»Ÿä¸€å½’å£å¤„ç†æ‰€æœ‰äº¤æ˜“ç›¸å…³çš„ç½‘ç»œæ¶ˆæ¯
// - ä½¿ç”¨çœŸå®ä¾èµ–æœåŠ¡ï¼Œæ— TODO/ä¸´æ—¶å®ç°
// - ä¸¥æ ¼éµå¾ªå…¬å…±æ¥å£ï¼Œä¸ç›´æ¥è°ƒç”¨cryptoåŒ…
type TxNetworkProtocolHandlerService struct {
	txPool    mempool.TxPool                          // äº¤æ˜“æ± æœåŠ¡
	validator *lifecycle.TransactionValidationService // äº¤æ˜“éªŒè¯æœåŠ¡
	logger    log.Logger                              // æ—¥å¿—æœåŠ¡
}

// NewTxNetworkProtocolHandlerService åˆ›å»ºäº¤æ˜“ç½‘ç»œåè®®å¤„ç†æœåŠ¡å®ä¾‹
//
// å‚æ•°:
//
//	txPool: äº¤æ˜“æ± æœåŠ¡ï¼Œç”¨äºæäº¤éªŒè¯é€šè¿‡çš„äº¤æ˜“
//	validator: äº¤æ˜“éªŒè¯æœåŠ¡ï¼Œç”¨äºéªŒè¯äº¤æ˜“æœ‰æ•ˆæ€§
//	logger: æ—¥å¿—æœåŠ¡ï¼Œç”¨äºè®°å½•å¤„ç†è¿‡ç¨‹
//
// è¿”å›:
//
//	interfaces.NetworkProtocolHandler: äº¤æ˜“ç½‘ç»œåè®®å¤„ç†å™¨å®ä¾‹
func NewTxNetworkProtocolHandlerService(
	txPool mempool.TxPool,
	validator *lifecycle.TransactionValidationService,
	logger log.Logger,
) interfaces.NetworkProtocolHandler {
	return &TxNetworkProtocolHandlerService{
		txPool:    txPool,
		validator: validator,
		logger:    logger,
	}
}

// ç¼–è¯‘æ—¶ç¡®ä¿ TxNetworkProtocolHandlerService å®ç°äº† NetworkProtocolHandler æ¥å£
var _ interfaces.NetworkProtocolHandler = (*TxNetworkProtocolHandlerService)(nil)

// HandleTransactionAnnounce å¤„ç†äº¤æ˜“å…¬å‘Š
//
// ğŸ¯ **å®ç° integration/network.TxAnnounceRouter æ¥å£**
//
// å¤„ç†æµç¨‹ï¼š
// 1. è§£ææ ‡å‡†protobufäº¤æ˜“å…¬å‘Šæ•°æ®ï¼ˆåŒ…å«å®Œæ•´äº¤æ˜“ï¼‰
// 2. éªŒè¯äº¤æ˜“å…¬å‘Šçš„å®Œæ•´æ€§
// 3. å»é‡æ£€æŸ¥ï¼šç¡®ä¿äº¤æ˜“æœªåœ¨æœ¬åœ°å†…å­˜æ± ä¸­
// 4. å®Œæ•´äº¤æ˜“éªŒè¯ï¼šéªŒè¯äº¤æ˜“æœ‰æ•ˆæ€§
// 5. å…¥æ± å¤„ç†ï¼šå°†éªŒè¯é€šè¿‡çš„äº¤æ˜“æ·»åŠ åˆ°å†…å­˜æ± 
//
// ğŸ“ **æ³¨æ„**ï¼š
// æ­¤æ–¹æ³•å¤„ç†æ ‡å‡†TransactionAnnouncement protobufæ¶ˆæ¯ï¼ŒåŒ…å«å®Œæ•´äº¤æ˜“æ•°æ®ã€‚
// éµå¾ªåŒé‡ä¿éšœä¼ æ’­æœºåˆ¶çš„ä¸»è¦è·¯å¾„ï¼ˆGossipSubï¼‰ã€‚
//
// å‚æ•°:
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - from: å‘é€æ–¹peer ID
//   - topic: å…¬å‘Šä¸»é¢˜
//   - data: äº¤æ˜“å…¬å‘Šçš„protobufåºåˆ—åŒ–æ•°æ®
//
// è¿”å›:
//   - error: å¤„ç†è¿‡ç¨‹ä¸­çš„é”™è¯¯ï¼Œnilè¡¨ç¤ºæˆåŠŸ
func (h *TxNetworkProtocolHandlerService) HandleTransactionAnnounce(ctx context.Context, from peer.ID, topic string, data []byte) error {
	if h.logger != nil {
		h.logger.Debugf("å¤„ç†äº¤æ˜“å…¬å‘Š: from=%s, topic=%s, size=%d", from.String()[:8], topic, len(data))
	}

	// 1. è§£ææ ‡å‡†protobuf TransactionAnnouncementæ¶ˆæ¯
	var announcement txProtocol.TransactionAnnouncement
	if err := proto.Unmarshal(data, &announcement); err != nil {
		if h.logger != nil {
			h.logger.Warnf("è§£æTransactionAnnouncementå¤±è´¥: %v", err)
		}
		return fmt.Errorf("è§£æTransactionAnnouncementå¤±è´¥: %w", err)
	}

	// 2. éªŒè¯æ¶ˆæ¯å®Œæ•´æ€§
	if len(announcement.TransactionHash) != 32 {
		return fmt.Errorf("äº¤æ˜“å“ˆå¸Œé•¿åº¦æ— æ•ˆ: æœŸæœ›32å­—èŠ‚ï¼Œå®é™…%då­—èŠ‚", len(announcement.TransactionHash))
	}

	if announcement.Transaction == nil {
		return fmt.Errorf("ç¼ºå°‘å®Œæ•´äº¤æ˜“æ•°æ®")
	}

	if announcement.Timestamp == 0 {
		return fmt.Errorf("äº¤æ˜“æ—¶é—´æˆ³ä¸èƒ½ä¸º0")
	}

	// 3. å»é‡æ£€æŸ¥ï¼šç¡®ä¿äº¤æ˜“æœªåœ¨å†…å­˜æ± ä¸­
	txHash := announcement.TransactionHash
	existingTx, err := h.txPool.GetTx(txHash)
	if err == nil && existingTx != nil {
		if h.logger != nil {
			h.logger.Debug(fmt.Sprintf("äº¤æ˜“å·²å­˜åœ¨äºå†…å­˜æ± ä¸­ï¼Œè·³è¿‡å¤„ç†: txHash=%x", txHash[:8]))
		}
		return nil // é‡å¤äº¤æ˜“ï¼Œä¸ç®—é”™è¯¯
	}

	// 4. å®Œæ•´äº¤æ˜“éªŒè¯
	if h.validator != nil {
		valid, err := h.validator.ValidateTransactionObject(ctx, announcement.Transaction)
		if err != nil {
			if h.logger != nil {
				h.logger.Warnf("äº¤æ˜“éªŒè¯è¿‡ç¨‹å¤±è´¥: txHash=%x, error=%v", txHash[:8], err)
			}
			return fmt.Errorf("äº¤æ˜“éªŒè¯è¿‡ç¨‹å¤±è´¥: %w", err)
		}
		if !valid {
			if h.logger != nil {
				h.logger.Warnf("äº¤æ˜“éªŒè¯ä¸é€šè¿‡: txHash=%x", txHash[:8])
			}
			return fmt.Errorf("äº¤æ˜“éªŒè¯ä¸é€šè¿‡")
		}
	}

	// 5. æ·»åŠ åˆ°å†…å­˜æ± 
	submittedTxHash, err := h.txPool.SubmitTx(announcement.Transaction)
	if err != nil {
		if h.logger != nil {
			h.logger.Errorf("æ·»åŠ åˆ°å†…å­˜æ± å¤±è´¥: txHash=%x, error=%v", txHash[:8], err)
		}
		return fmt.Errorf("æ·»åŠ åˆ°å†…å­˜æ± å¤±è´¥: %w", err)
	}

	// 6. è®°å½•å¤„ç†æˆåŠŸ
	if h.logger != nil {
		h.logger.Infof("âœ… äº¤æ˜“å…¬å‘Šå¤„ç†å®Œæˆ: txHash=%x, submittedHash=%x, messageId=%s, from=%s",
			txHash[:8], submittedTxHash[:8], announcement.MessageId, from.String()[:8])
	}

	return nil
}

// ============================================================================
//                           æµå¼åè®®å¤„ç† (Stream Handlers)
// ============================================================================

// HandleTransactionDirect å¤„ç†äº¤æ˜“ç›´è¿ä¼ æ’­è¯·æ±‚
//
// ğŸ¯ **å®ç° integration/network.TxProtocolRouter æ¥å£**
//
// å¤„ç†åŒé‡ä¿éšœä¼ æ’­æœºåˆ¶çš„å¤‡ä»½è·¯å¾„ï¼ˆStream RPCï¼‰ï¼š
// 1. è§£æTransactionPropagationRequestè¯·æ±‚
// 2. æ£€æŸ¥è¯·æ±‚çš„äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
// 3. ç¡®å®šå“ªäº›äº¤æ˜“éœ€è¦ä¼ è¾“
// 4. è¿”å›TransactionPropagationResponseå“åº”
//
// ğŸ“ **å¤‡ä»½ä¼ æ’­è·¯å¾„ç‰¹æ€§**ï¼š
// - ç¡®ä¿é€è¾¾ï¼šè¦æ±‚æ˜ç¡®ç¡®è®¤
// - K-bucketé€‰æ‹©ï¼š2-3ä¸ªé‚»è¿‘èŠ‚ç‚¹
// - ç‚¹å¯¹ç‚¹ä¼ è¾“ï¼šå¯é çš„ç½‘ç»œä¼ è¾“
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡ï¼ˆç”¨äºè¶…æ—¶æ§åˆ¶ï¼‰
//   - from: å‘é€æ–¹èŠ‚ç‚¹ID
//   - reqBytes: åºåˆ—åŒ–çš„TransactionPropagationRequestæ•°æ®
//
// è¿”å›ï¼š
//   - []byte: åºåˆ—åŒ–çš„TransactionPropagationResponseæ•°æ®
//   - error: å¤„ç†å¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (h *TxNetworkProtocolHandlerService) HandleTransactionDirect(ctx context.Context, from peer.ID, reqBytes []byte) ([]byte, error) {
	if h.logger != nil {
		h.logger.Infof("ğŸ“¨ [äº¤æ˜“ç›´è¿] æ”¶åˆ°äº¤æ˜“ä¼ æ’­è¯·æ±‚: from=%s, size=%d bytes",
			from.String()[:8], len(reqBytes))
	}

	// 1. è§£æTransactionPropagationRequestè¯·æ±‚
	var request txProtocol.TransactionPropagationRequest
	if err := proto.Unmarshal(reqBytes, &request); err != nil {
		if h.logger != nil {
			h.logger.Warnf("è§£æTransactionPropagationRequestå¤±è´¥: %v", err)
		}
		return nil, fmt.Errorf("è§£æTransactionPropagationRequestå¤±è´¥: %w", err)
	}

	// 2. éªŒè¯è¯·æ±‚æœ‰æ•ˆæ€§
	if len(request.TxHashes) == 0 {
		return nil, fmt.Errorf("è¯·æ±‚ä¸­ç¼ºå°‘äº¤æ˜“å“ˆå¸Œåˆ—è¡¨")
	}

	if len(request.RequestId) == 0 {
		return nil, fmt.Errorf("è¯·æ±‚ä¸­ç¼ºå°‘RequestId")
	}

	// 3. å¤„ç†äº¤æ˜“å“ˆå¸Œåˆ—è¡¨ï¼Œæ£€æŸ¥æœ¬åœ°çŠ¶æ€
	var transactionStatuses []*txProtocol.TransactionPropagationResponse_TransactionStatus
	acceptedCount := uint32(0)
	duplicateCount := uint32(0)
	rejectedCount := uint32(0)

	for i, txHash := range request.TxHashes {
		status := h.processTransactionHashForDirect(ctx, txHash, i)
		transactionStatuses = append(transactionStatuses, status)

		// ç»Ÿè®¡å¤„ç†ç»“æœ
		switch status.Status {
		case txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_ACCEPTED:
			acceptedCount++
		case txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_DUPLICATE:
			duplicateCount++
		default:
			rejectedCount++
		}
	}

	// 4. æ„é€ å“åº”ï¼ˆä½¿ç”¨ç®€åŒ–çš„åè®®ç»“æ„ï¼‰
	response := &txProtocol.TransactionPropagationResponse{
		RequestId:    request.RequestId,
		Transactions: transactionStatuses,
		Success:      rejectedCount == 0, // æ²¡æœ‰æ‹’ç»çš„äº¤æ˜“åˆ™è®¤ä¸ºæˆåŠŸ
	}

	// å¦‚æœæœ‰å¤±è´¥çš„æƒ…å†µï¼Œæ·»åŠ é”™è¯¯æ¶ˆæ¯
	if rejectedCount > 0 {
		errorMsg := fmt.Sprintf("å¤„ç†äº†%dä¸ªäº¤æ˜“ï¼Œå…¶ä¸­%dä¸ªè¢«æ‹’ç»", len(request.TxHashes), rejectedCount)
		response.ErrorMessage = &errorMsg
	}

	// 5. åºåˆ—åŒ–å“åº”
	responseBytes, err := proto.Marshal(response)
	if err != nil {
		if h.logger != nil {
			h.logger.Errorf("åºåˆ—åŒ–TransactionPropagationResponseå¤±è´¥: %v", err)
		}
		return nil, fmt.Errorf("åºåˆ—åŒ–TransactionPropagationResponseå¤±è´¥: %w", err)
	}

	// 6. è®°å½•å¤„ç†ç»“æœ
	if h.logger != nil {
		h.logger.Infof("âœ… [äº¤æ˜“ç›´è¿] å¤„ç†å®Œæˆ: requestId=%s, from=%s, æ€»è®¡=%d, æ¥å—=%d, é‡å¤=%d, æ‹’ç»=%d",
			request.RequestId, from.String()[:8], len(request.TxHashes), acceptedCount, duplicateCount, rejectedCount)
	}

	return responseBytes, nil
}

// ============================================================================
//                              è¾…åŠ©æ–¹æ³• (Helper Methods)
// ============================================================================

// processTransactionHashForDirect å¤„ç†ç›´è¿ä¼ æ’­ä¸­çš„å•ä¸ªäº¤æ˜“å“ˆå¸Œ
//
// ğŸ” **äº¤æ˜“å“ˆå¸ŒçŠ¶æ€æ£€æŸ¥å™¨**
//
// æ£€æŸ¥æŒ‡å®šäº¤æ˜“å“ˆå¸Œåœ¨æœ¬åœ°çš„å¤„ç†çŠ¶æ€ï¼Œç”¨äºç›´è¿ä¼ æ’­å“åº”ã€‚
//
// ğŸ“ **å‚æ•°è¯´æ˜**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - txHash: äº¤æ˜“å“ˆå¸Œ
//   - index: åœ¨è¯·æ±‚ä¸­çš„ç´¢å¼•ä½ç½®
//
// ğŸ“¤ **è¿”å›å€¼è¯´æ˜**ï¼š
//   - *txProtocol.TransactionPropagationResponse_TransactionStatus: äº¤æ˜“çŠ¶æ€å“åº”
func (h *TxNetworkProtocolHandlerService) processTransactionHashForDirect(
	ctx context.Context,
	txHash []byte,
	index int,
) *txProtocol.TransactionPropagationResponse_TransactionStatus {
	// åŸºç¡€çŠ¶æ€ç»“æ„
	status := &txProtocol.TransactionPropagationResponse_TransactionStatus{
		TxHash: txHash,
		Status: txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_UNKNOWN,
	}

	// 1. éªŒè¯äº¤æ˜“å“ˆå¸Œæ ¼å¼
	if len(txHash) != 32 {
		status.Status = txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_REJECTED
		if h.logger != nil {
			h.logger.Warnf("äº¤æ˜“å“ˆå¸Œé•¿åº¦æ— æ•ˆ: æœŸæœ›32å­—èŠ‚ï¼Œå®é™…%då­—èŠ‚", len(txHash))
		}
		return status
	}

	// 2. æ£€æŸ¥äº¤æ˜“æ± ä¸­æ˜¯å¦å·²å­˜åœ¨
	if h.txPool != nil {
		existingTx, err := h.txPool.GetTx(txHash)
		if err == nil && existingTx != nil {
			// äº¤æ˜“å·²åœ¨å†…å­˜æ± ä¸­
			status.Status = txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_DUPLICATE
			if h.logger != nil {
				h.logger.Debug(fmt.Sprintf("äº¤æ˜“å·²å­˜åœ¨äºå†…å­˜æ± : txHash=%x", txHash[:8]))
			}
			return status
		}
	}

	// 3. æš‚æ—¶æ ‡è®°ä¸ºæ¥å—çŠ¶æ€
	// æ³¨æ„ï¼šåœ¨å®é™…å®ç°ä¸­ï¼Œè¿™é‡Œå¯èƒ½éœ€è¦è¿›ä¸€æ­¥çš„éªŒè¯é€»è¾‘
	// ä¾‹å¦‚ï¼šæ£€æŸ¥UTXOå¯ç”¨æ€§ã€éªŒè¯äº¤æ˜“æ ¼å¼ç­‰
	status.Status = txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_ACCEPTED

	if h.logger != nil {
		h.logger.Debug(fmt.Sprintf("äº¤æ˜“å“ˆå¸Œå¤„ç†å®Œæˆ: index=%d, txHash=%x, status=%v",
			index, txHash[:8], status.Status))
	}

	return status
}

// ç¼–è¯‘æœŸæ¥å£æ ¡éªŒ
var _ networkIntegration.TxAnnounceRouter = (*TxNetworkProtocolHandlerService)(nil)
var _ networkIntegration.TxProtocolRouter = (*TxNetworkProtocolHandlerService)(nil)
