// Package network_handler å®ç°äº¤æ˜“ç½‘ç»œåè®®å¤„ç†æœåŠ¡
//
// ğŸ¯ **äº¤æ˜“ç½‘ç»œåè®®å¤„ç†æœåŠ¡æ¨¡å—**
//
// æœ¬åŒ…å®ç° TxProtocolRouter å’Œ TxAnnounceRouter æ¥å£ï¼Œæä¾›äº¤æ˜“ç½‘ç»œåè®®å¤„ç†åŠŸèƒ½ï¼š
// - å®ç°TxProtocolRouteræ¥å£ï¼ˆæµå¼åè®®å¤„ç†ï¼‰
// - å®ç°TxAnnounceRouteræ¥å£ï¼ˆè®¢é˜…åè®®å¤„ç†ï¼‰
// - æ”¯æŒäº¤æ˜“åŒé‡ä¿éšœä¼ æ’­æœºåˆ¶
//
// è®¾è®¡ç†å¿µï¼š
// - è–„å§”æ‰˜å±‚ï¼šåªè´Ÿè´£ç½‘ç»œæ¶ˆæ¯çš„æ¥æ”¶å’Œè½¬å‘
// - èŒè´£å•ä¸€ï¼šè§£æprotobuf â†’ å»é‡æ£€æŸ¥ â†’ å§”æ‰˜éªŒè¯å™¨ â†’ æäº¤åˆ°æ± 
// - æ— çŠ¶æ€ï¼šä¸ç»´æŠ¤äº¤æ˜“çŠ¶æ€ï¼Œåªåšæµç¨‹ç¼–æ’
package network_handler

import (
	"context"
	"fmt"

	peer "github.com/libp2p/go-libp2p/core/peer"
	txProtocol "github.com/weisyn/v1/pb/network/protocol"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/mempool"
	"google.golang.org/protobuf/proto"
)

// NetworkHandler äº¤æ˜“ç½‘ç»œåè®®å¤„ç†å™¨
//
// ğŸ¯ **èŒè´£å®šä½**ï¼š
// - å®ç° integration/network.TxAnnounceRouter æ¥å£ï¼ˆè®¢é˜…åè®®ï¼‰
// - å®ç° integration/network.TxProtocolRouter æ¥å£ï¼ˆæµå¼åè®®ï¼‰
// - å¤„ç†æ¥è‡ªP2Pç½‘ç»œçš„äº¤æ˜“å…¬å‘Šæ¶ˆæ¯å’Œäº¤æ˜“ä¸­ç»§è¯·æ±‚
// - æ‰§è¡Œï¼šè§£ç  â†’ å»é‡ â†’ éªŒè¯ â†’ å…¥æ± çš„å®Œæ•´æµç¨‹
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**ï¼š
// - è–„å§”æ‰˜å±‚ï¼šä¸å®ç°ä¸šåŠ¡é€»è¾‘ï¼Œåªåšæµç¨‹ç¼–æ’
// - ç»Ÿä¸€å½’å£ï¼šå¤„ç†æ‰€æœ‰äº¤æ˜“ç›¸å…³çš„ç½‘ç»œæ¶ˆæ¯
// - ä¾èµ–æ³¨å…¥ï¼šé€šè¿‡æ¥å£è·å–éªŒè¯æœåŠ¡å’Œäº¤æ˜“æ± 
type NetworkHandler struct {
	txPool mempool.TxPool // äº¤æ˜“æ± æœåŠ¡
	logger log.Logger     // æ—¥å¿—æœåŠ¡
}

// NewNetworkHandler åˆ›å»ºäº¤æ˜“ç½‘ç»œåè®®å¤„ç†å™¨å®ä¾‹
//
// å‚æ•°:
//
//	txPool: äº¤æ˜“æ± æœåŠ¡ï¼Œç”¨äºæäº¤éªŒè¯é€šè¿‡çš„äº¤æ˜“
//	logger: æ—¥å¿—æœåŠ¡ï¼Œç”¨äºè®°å½•å¤„ç†è¿‡ç¨‹
//
// è¿”å›:
//
//	*NetworkHandler: äº¤æ˜“ç½‘ç»œåè®®å¤„ç†å™¨å®ä¾‹
func NewNetworkHandler(
	txPool mempool.TxPool,
	logger log.Logger,
) *NetworkHandler {
	return &NetworkHandler{
		txPool: txPool,
		logger: logger,
	}
}

// HandleTransactionAnnounce å¤„ç†äº¤æ˜“å…¬å‘Š
//
// ğŸ¯ **å®ç° integration/network.TxAnnounceRouter æ¥å£**
//
// å¤„ç†æµç¨‹ï¼š
// 1. è§£ææ ‡å‡†protobufäº¤æ˜“å…¬å‘Šæ•°æ®ï¼ˆåŒ…å«å®Œæ•´äº¤æ˜“ï¼‰
// 2. éªŒè¯äº¤æ˜“å…¬å‘Šçš„å®Œæ•´æ€§
// 3. å»é‡æ£€æŸ¥ï¼šç¡®ä¿äº¤æ˜“æœªåœ¨æœ¬åœ°å†…å­˜æ± ä¸­
// 4. æäº¤åˆ°æ± ï¼šTxPoolå†…éƒ¨ä¼šæ‰§è¡ŒéªŒè¯å’Œå¹¿æ’­
//
// å‚æ•°:
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - from: å‘é€æ–¹peer ID
//   - topic: å…¬å‘Šä¸»é¢˜
//   - data: äº¤æ˜“å…¬å‘Šçš„protobufåºåˆ—åŒ–æ•°æ®
//
// è¿”å›:
//   - error: å¤„ç†è¿‡ç¨‹ä¸­çš„é”™è¯¯ï¼Œnilè¡¨ç¤ºæˆåŠŸ
func (h *NetworkHandler) HandleTransactionAnnounce(ctx context.Context, from peer.ID, topic string, data []byte) error {
	// é˜²å¾¡æ€§ï¼šè®¡ç®—å®‰å…¨çš„èŠ‚ç‚¹IDçŸ­ä¸²ç”¨äºæ—¥å¿—
	fromStr := from.String()
	if len(fromStr) > 8 {
		fromStr = fromStr[:8]
	}

	if h.logger != nil {
		h.logger.Debugf("[TxProcessor/Network] å¤„ç†äº¤æ˜“å…¬å‘Š: from=%s, topic=%s, size=%d", fromStr, topic, len(data))
	}

	// é˜²å¾¡æ€§ï¼šç¡®ä¿ txPool å·²æ³¨å…¥
	if h.txPool == nil {
		return fmt.Errorf("txPool æœªåˆå§‹åŒ–")
	}

	// 1. è§£ææ ‡å‡†protobuf TransactionAnnouncementæ¶ˆæ¯
	var announcement txProtocol.TransactionAnnouncement
	if err := proto.Unmarshal(data, &announcement); err != nil {
		if h.logger != nil {
			h.logger.Warnf("[TxProcessor/Network] è§£æTransactionAnnouncementå¤±è´¥: %v", err)
		}
		return fmt.Errorf("è§£æTransactionAnnouncementå¤±è´¥: %w", err)
	}

	// 2. éªŒè¯æ¶ˆæ¯å®Œæ•´æ€§
	if len(announcement.TransactionHash) != 32 {
		return fmt.Errorf("äº¤æ˜“å“ˆå¸Œé•¿åº¦æ— æ•ˆ: æœŸæœ›32å­—èŠ‚ï¼Œå®é™…%då­—èŠ‚", len(announcement.TransactionHash))
	}

	if announcement.Transaction == nil {
		return fmt.Errorf("ç¼ºå°‘å®Œæ•´äº¤æ˜“æ•°æ®")
	}

	if announcement.Timestamp == 0 {
		return fmt.Errorf("äº¤æ˜“æ—¶é—´æˆ³ä¸èƒ½ä¸º0")
	}

	// 3. å»é‡æ£€æŸ¥ï¼šç¡®ä¿äº¤æ˜“æœªåœ¨å†…å­˜æ± ä¸­
	txHash := announcement.TransactionHash
	existingTx, err := h.txPool.GetTx(txHash)
	if err == nil && existingTx != nil {
		if h.logger != nil {
			h.logger.Debug(fmt.Sprintf("[TxProcessor/Network] äº¤æ˜“å·²å­˜åœ¨äºå†…å­˜æ± ä¸­ï¼Œè·³è¿‡å¤„ç†: txHash=%x", txHash[:8]))
		}
		return nil // é‡å¤äº¤æ˜“ï¼Œä¸ç®—é”™è¯¯
	}

	// 4. æäº¤åˆ°å†…å­˜æ± ï¼ˆTxPoolå†…éƒ¨ä¼šæ‰§è¡ŒéªŒè¯ï¼‰
	submittedTxHash, err := h.txPool.SubmitTx(announcement.Transaction)
	if err != nil {
		if h.logger != nil {
			h.logger.Errorf("[TxProcessor/Network] æäº¤åˆ°å†…å­˜æ± å¤±è´¥: txHash=%x, error=%v", txHash[:8], err)
		}
		return fmt.Errorf("æäº¤åˆ°å†…å­˜æ± å¤±è´¥: %w", err)
	}

	// 5. è®°å½•å¤„ç†æˆåŠŸ
	if h.logger != nil {
		h.logger.Infof("[TxProcessor/Network] âœ… äº¤æ˜“å…¬å‘Šå¤„ç†å®Œæˆ: txHash=%x, submittedHash=%x, messageId=%s, from=%s",
			txHash[:8], submittedTxHash[:8], announcement.MessageId, fromStr)
	}

	return nil
}

// HandleTransactionDirect å¤„ç†äº¤æ˜“ç›´è¿ä¼ æ’­è¯·æ±‚
//
// ğŸ¯ **å®ç° integration/network.TxProtocolRouter æ¥å£**
//
// å¤„ç†åŒé‡ä¿éšœä¼ æ’­æœºåˆ¶çš„å¤‡ä»½è·¯å¾„ï¼ˆStream RPCï¼‰ï¼š
// 1. è§£æTransactionPropagationRequestè¯·æ±‚
// 2. æ£€æŸ¥è¯·æ±‚çš„äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
// 3. ç¡®å®šå“ªäº›äº¤æ˜“éœ€è¦ä¼ è¾“
// 4. è¿”å›TransactionPropagationResponseå“åº”
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡ï¼ˆç”¨äºè¶…æ—¶æ§åˆ¶ï¼‰
//   - from: å‘é€æ–¹èŠ‚ç‚¹ID
//   - reqBytes: åºåˆ—åŒ–çš„TransactionPropagationRequestæ•°æ®
//
// è¿”å›ï¼š
//   - []byte: åºåˆ—åŒ–çš„TransactionPropagationResponseæ•°æ®
//   - error: å¤„ç†å¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (h *NetworkHandler) HandleTransactionDirect(ctx context.Context, from peer.ID, reqBytes []byte) ([]byte, error) {
	if h.logger != nil {
		h.logger.Infof("[TxProcessor/Network] ğŸ“¨ æ”¶åˆ°äº¤æ˜“ä¼ æ’­è¯·æ±‚: from=%s, size=%d bytes",
			from.String()[:8], len(reqBytes))
	}

	// 1. è§£æTransactionPropagationRequestè¯·æ±‚
	var request txProtocol.TransactionPropagationRequest
	if err := proto.Unmarshal(reqBytes, &request); err != nil {
		if h.logger != nil {
			h.logger.Warnf("[TxProcessor/Network] è§£æTransactionPropagationRequestå¤±è´¥: %v", err)
		}
		return nil, fmt.Errorf("è§£æTransactionPropagationRequestå¤±è´¥: %w", err)
	}

	// 2. éªŒè¯è¯·æ±‚æœ‰æ•ˆæ€§
	if len(request.TxHashes) == 0 {
		return nil, fmt.Errorf("è¯·æ±‚ä¸­ç¼ºå°‘äº¤æ˜“å“ˆå¸Œåˆ—è¡¨")
	}

	if len(request.RequestId) == 0 {
		return nil, fmt.Errorf("è¯·æ±‚ä¸­ç¼ºå°‘RequestId")
	}

	// 3. å¤„ç†äº¤æ˜“å“ˆå¸Œåˆ—è¡¨ï¼Œæ£€æŸ¥æœ¬åœ°çŠ¶æ€
	var transactionStatuses []*txProtocol.TransactionPropagationResponse_TransactionStatus
	acceptedCount := uint32(0)
	duplicateCount := uint32(0)
	rejectedCount := uint32(0)

	for i, txHash := range request.TxHashes {
		status := h.processTransactionHash(ctx, txHash, i)
		transactionStatuses = append(transactionStatuses, status)

		// ç»Ÿè®¡å¤„ç†ç»“æœ
		switch status.Status {
		case txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_ACCEPTED:
			acceptedCount++
		case txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_DUPLICATE:
			duplicateCount++
		default:
			rejectedCount++
		}
	}

	// 4. æ„é€ å“åº”
	response := &txProtocol.TransactionPropagationResponse{
		RequestId:    request.RequestId,
		Transactions: transactionStatuses,
		Success:      rejectedCount == 0,
	}

	// å¦‚æœæœ‰å¤±è´¥çš„æƒ…å†µï¼Œæ·»åŠ é”™è¯¯æ¶ˆæ¯
	if rejectedCount > 0 {
		errorMsg := fmt.Sprintf("å¤„ç†äº†%dä¸ªäº¤æ˜“ï¼Œå…¶ä¸­%dä¸ªè¢«æ‹’ç»", len(request.TxHashes), rejectedCount)
		response.ErrorMessage = &errorMsg
	}

	// 5. åºåˆ—åŒ–å“åº”
	responseBytes, err := proto.Marshal(response)
	if err != nil {
		if h.logger != nil {
			h.logger.Errorf("[TxProcessor/Network] åºåˆ—åŒ–TransactionPropagationResponseå¤±è´¥: %v", err)
		}
		return nil, fmt.Errorf("åºåˆ—åŒ–TransactionPropagationResponseå¤±è´¥: %w", err)
	}

	// 6. è®°å½•å¤„ç†ç»“æœ
	if h.logger != nil {
		h.logger.Infof("[TxProcessor/Network] âœ… å¤„ç†å®Œæˆ: requestId=%s, from=%s, æ€»è®¡=%d, æ¥å—=%d, é‡å¤=%d, æ‹’ç»=%d",
			request.RequestId, from.String()[:8], len(request.TxHashes), acceptedCount, duplicateCount, rejectedCount)
	}

	return responseBytes, nil
}

// processTransactionHash å¤„ç†ç›´è¿ä¼ æ’­ä¸­çš„å•ä¸ªäº¤æ˜“å“ˆå¸Œ
func (h *NetworkHandler) processTransactionHash(
	ctx context.Context,
	txHash []byte,
	index int,
) *txProtocol.TransactionPropagationResponse_TransactionStatus {
	// åŸºç¡€çŠ¶æ€ç»“æ„
	status := &txProtocol.TransactionPropagationResponse_TransactionStatus{
		TxHash: txHash,
		Status: txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_UNKNOWN,
	}

	// 1. éªŒè¯äº¤æ˜“å“ˆå¸Œæ ¼å¼
	if len(txHash) != 32 {
		status.Status = txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_REJECTED
		if h.logger != nil {
			h.logger.Warnf("[TxProcessor/Network] äº¤æ˜“å“ˆå¸Œé•¿åº¦æ— æ•ˆ: æœŸæœ›32å­—èŠ‚ï¼Œå®é™…%då­—èŠ‚", len(txHash))
		}
		return status
	}

	// 2. æ£€æŸ¥äº¤æ˜“æ± ä¸­æ˜¯å¦å·²å­˜åœ¨
	if h.txPool != nil {
		existingTx, err := h.txPool.GetTx(txHash)
		if err == nil && existingTx != nil {
			// äº¤æ˜“å·²åœ¨å†…å­˜æ± ä¸­
			status.Status = txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_DUPLICATE
			if h.logger != nil {
				h.logger.Debug(fmt.Sprintf("[TxProcessor/Network] äº¤æ˜“å·²å­˜åœ¨äºå†…å­˜æ± : txHash=%x", txHash[:8]))
			}
			return status
		}
	}

	// 3. æ ‡è®°ä¸ºæ¥å—çŠ¶æ€ï¼ˆç­‰å¾…åç»­å®Œæ•´äº¤æ˜“æ•°æ®ï¼‰
	status.Status = txProtocol.TransactionPropagationResponse_TransactionStatus_STATUS_ACCEPTED

	if h.logger != nil {
		h.logger.Debug(fmt.Sprintf("[TxProcessor/Network] äº¤æ˜“å“ˆå¸Œå¤„ç†å®Œæˆ: index=%d, txHash=%x, status=%v",
			index, txHash[:8], status.Status))
	}

	return status
}
